--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Venga">
-        <activity android:name=".Contact2"></activity>
+        <activity android:name=".addContact"></activity>
+        <activity android:name=".Contact2" />
         <activity android:name=".Chat" />
         <activity android:name=".Message" />
         <activity android:name=".Contact" />
